// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DistinctCity renders correctly 1`] = `
<g>
  <line
    stroke="black"
    strokeDasharray="1,0"
    strokeWidth={8}
    x1={64}
    x2={64}
    y1={23}
    y2={0}
  />
  <svg
    onContextMenu={[Function]}
    x={44}
    y={3}
  >
    <circle
      className="city-circle"
      cx={20}
      cy={20}
      fill="white"
      r={19}
      stroke="#000"
      strokeWidth={2}
    />
  </svg>
  <line
    stroke="black"
    strokeDasharray="1,0"
    strokeWidth={8}
    x1={35.918584287042094}
    x2={16}
    y1={39.21281292110204}
    y2={27.71281292110204}
  />
  <svg
    onContextMenu={[Function]}
    x={15.918584287042094}
    y={19.212812921102042}
  >
    <circle
      className="city-circle"
      cx={20}
      cy={20}
      fill="white"
      r={19}
      stroke="#000"
      strokeWidth={2}
    />
  </svg>
</g>
`;

exports[`DistinctCity when there are more than two spots uses a smaller radius 1`] = `
<g>
  <line
    stroke="black"
    strokeDasharray="1,0"
    strokeWidth={8}
    x1={64}
    x2={64}
    y1={21}
    y2={0}
  />
  <svg
    onContextMenu={[Function]}
    x={46}
    y={3}
  >
    <circle
      className="city-circle"
      cx={18}
      cy={18}
      fill="white"
      r={17}
      stroke="#000"
      strokeWidth={2}
    />
  </svg>
  <line
    stroke="black"
    strokeDasharray="1,0"
    strokeWidth={8}
    x1={34.18653347947321}
    x2={16}
    y1={38.21281292110204}
    y2={27.71281292110204}
  />
  <svg
    onContextMenu={[Function]}
    x={16.186533479473212}
    y={20.212812921102042}
  >
    <circle
      className="city-circle"
      cx={18}
      cy={18}
      fill="white"
      r={17}
      stroke="#000"
      strokeWidth={2}
    />
  </svg>
  <line
    stroke="black"
    strokeDasharray="1,0"
    strokeWidth={8}
    x1={34.18653347947321}
    x2={15.999999999999993}
    y1={72.6384387633061}
    y2={83.13843876330608}
  />
  <svg
    onContextMenu={[Function]}
    x={16.186533479473212}
    y={54.6384387633061}
  >
    <circle
      className="city-circle"
      cx={18}
      cy={18}
      fill="white"
      r={17}
      stroke="#000"
      strokeWidth={2}
    />
  </svg>
  <line
    stroke="black"
    strokeDasharray="1,0"
    strokeWidth={8}
    x1={93.81346652052677}
    x2={111.99999999999997}
    y1={72.63843876330611}
    y2={83.13843876330613}
  />
  <svg
    onContextMenu={[Function]}
    x={75.81346652052677}
    y={54.63843876330611}
  >
    <circle
      className="city-circle"
      cx={18}
      cy={18}
      fill="white"
      r={17}
      stroke="#000"
      strokeWidth={2}
    />
  </svg>
</g>
`;
